package com.portafolioDJ.dao;

import com.portafolioDJ.models.Asesoria;
import java.util.List;

public class AsesoriaDAOImpl implements AsesoriaDAO {

    @Override
    public void addAsesoria(Asesoria asesoria) {
    }

    @Override
    public Asesoria getAsesoriaById(String id) {
        return null;
    }

    @Override
    public List<Asesoria> getAllAsesorias() {
        return null;
    }

    @Override
    public void updateAsesoria(Asesoria asesoria) {
    }

    @Override
    public void deleteAsesoria(String id) {
    }
}
