package com.portafolioDJ.dao;

import com.portafolioDJ.models.Contact;

public class ContactDAOImpl implements ContactDAO {

    @Override
    public Contact getContactByUserId(String userId) {
        return null;
    }

    @Override
    public void saveContact(String userId, Contact contact) {
    }

    @Override
    public void updateContact(String userId, Contact contact) {
    }

    @Override
    public void deleteContact(String userId) {
    }
}
