package com.portafolioDJ.dao;

import com.portafolioDJ.models.Project;
import java.util.List;
// importaciones para la base de datos (ej. java.sql.*)

public class ProjectDAOImpl implements ProjectDAO {

    @Override
    public void addProject(Project project) {
    }

    @Override
    public Project getProjectById(int id) {
        return null;
    }

    @Override
    public List<Project> getAllProjects() {
        return null;
    }

    @Override
    public void updateProject(Project project) {
    }

    @Override
    public void deleteProject(int id) {
    }
}
