package com.portafolioDJ.dao;

import com.portafolioDJ.models.Schedule;
import java.util.List;

public class ScheduleDAOImpl implements ScheduleDAO {

    @Override
    public void addSchedule(Schedule schedule) {
    }

    @Override
    public Schedule getScheduleById(String id) {
        return null;
    }

    @Override
    public List<Schedule> getAllSchedules() {
        return null;
    }

    @Override
    public List<Schedule> getSchedulesByProgrammerId(String programmerId) {
        return null;
    }

    @Override
    public void updateSchedule(Schedule schedule) {
    }

    @Override
    public void deleteSchedule(String id) {
    }
}
