package com.portafolioDJ.dao;

import com.portafolioDJ.models.User;
import java.util.List;

public class UserDAOImpl implements UserDAO {

    @Override
    public void addUser(User user) {
    }

    @Override
    public User getUserByUid(String uid) {
        return null;
    }

    @Override
    public User getUserByEmail(String email) {
        return null;
    }

    @Override
    public List<User> getAllUsers() {
        return null;
    }

    @Override
    public List<User> getUsersByRole(String role) {
        return null;
    }

    @Override
    public void updateUser(User user) {
    }

    @Override
    public void deleteUser(String uid) {
    }
}
